[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 5 - Production/Stable", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "LCLS User Controls and Inteface Design"
dynamic = [ "version", "readme",]
keywords = []
name = "lucid"
requires-python = ">=3.12"
dependencies = [
    "happi>=3.0.1",
    "ophyd>=1.11.0",
    "pcdsutils>=0.14.0",
    "pydm>=1.28.3",
    "pyqt5>=5",
    "pyyaml>=6.0.3",
    "qtpy>=2.4.3",
    "typhos>=4.2.1",
]

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[project.gui-scripts]
lucid = "lucid.launcher:main"

[project.optional-dependencies]
dev = [
    "pcdsdevices>=10.3.0",
    "pcdswidgets>=0.10.0",
]
doc = [
    "sphinx>=9.1.0",
    "sphinx-argparse>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-jquery>=4.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[tool.setuptools_scm]
write_to = "lucid/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "lucid*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false
